# Trial

./: asdas  classes.py  enccccc  main.py  pyproject.toml  utilities.py
cogs/: Antinuke.py  mod.py
