[tool.poetry]
name = "repl_python3_Proton"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
"py-cord" = {git = "https://github.com/Pycord-Development/pycord.git"}
discord = "^1.7.3"
django-timezone = "^0.3"
humanize = "^3.13.1"
nanoid = "^2.0.0"
PyMySQL = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
